# aws-data-perimeter

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  spec-requirements.md
config/: data_perimeter_intent.yaml
config/exceptions/: exception_schema.json  exception_template.yaml
config/wiz/: README.md  data_perimeter_violations.graphql  expired_exceptions.graphql  network_perimeter_violations.graphql
generator/: cli.py  intent_parser.py  policy_generator.py  policy_splitter.py  policy_validator.py
generator/templates/: cmk_enforcement.py  identity_perimeter.py  kms_abac.py  network_perimeter.py  org_boundary.py  tag_governance.py
lambda/compliance_reporter/: handler.py
lambda/exception_expiry_enforcer/: handler.py
lambda/tag_remediation/: handler.py
terraform/environments/canary/: backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/modules/access-analyzer/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudtrail-athena/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch-dashboard/: main.tf  outputs.tf  variables.tf
terraform/modules/compliance-reporter/: main.tf  outputs.tf  variables.tf
terraform/modules/exception-enforcer/: main.tf  (+2 more)
terraform/policies/: rcp-identity-perimeter.json  scp-cmk-enforcement.json  scp-kms-abac.json  scp-network-perimeter.json  scp-org-boundary.json  scp-tag-governance.json
tests/: test_compliance_reporter.py  test_exception_enforcer.py  test_policy_generator.py  test_policy_splitter.py  test_policy_validator.py  test_tag_remediation.py
tests/fixtures/: sample_intent.yaml
(+16 files in other folders)
